#644 Fix for bug with items returned when ID is not found